[metadata]
name = asymmetric_matchers
version = attr: asymmetric_matchers.__version__
description = Asymmetric matchers for testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duailibe/asymmetric-matchers
author = Lucas Duailibe
author_email = lucasds@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
keywords = testing asymmetric matchers
project_urls =
    Documentation = https://github.com/duailibe/asymmetric-matchers
    Source Code = https://github.com/duailibe/asymmetric-matchers
    Bug Tracker = https://github.com/duailibe/asymmetric-matchers/issues

[options]
packages = find:
python_requires = >=3.6

[flake8]
max-line-length = 88
ignore = E203, E501, W503, B903, B904, B950
select = B,E,F,W,B9,ISC
per-file-ignores = __init__.py:F401,F403

[mypy]
files = asymmetric_matchers
python_version = 3.9
no_implicit_optional = True
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-asymmetric_matchers]
disallow_untyped_defs = True
check_untyped_defs = True
